--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@mui/x-data-grid": "^8.5.0",
+    "@mui/x-date-pickers": "^8.23.0",
+    "@mui/x-date-pickers-pro": "^8.23.0",
     "@tanstack/react-query": "^5.79.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -28,6 +30,7 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "recharts": "^3.6.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
