--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "recharts": "^3.6.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "scripts": {
